update things
